[package]
name = "jvm-rs"
description = "Bindings for the JVM and its interfaces"
homepage = "https://github.com/x4e/rs-jvm-bindings"
repository = "https://github.com/x4e/rs-jvm-bindings"
version = "1.0.1"
authors = ["x4e <x4e_x4e@protonmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
keywords = ["jvm", "java", "jmm", "jni", "jvmti"]
categories = ["external-ffi-bindings"]

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi"] }
